--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "mongodb": "^4.1.0",
+    "mongoose": "^5.13.7",
     "morgan": "^1.10.0"
   }
 }
